# interactive_computer_graphics

./: .travis.yml  CMakeLists.txt  Makefile  README.md  license
.circleci/: config.yml
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/: append_example10  append_example2  append_example2.cpp  append_example3  append_example4  append_example4.cpp  append_example5  append_example5.cpp  append_example6  append_example6.cpp  append_example7  append_example8  append_example9  fshader_a7.glsl  patches.h  vertices.h  vshader_a2.glsl  vshader_a6.glsl  vshader_a7.glsl
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example10/: CMakeLists.txt  append_example10.cpp  append_example_a10.cpp  vshader_a10.glsl
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example2/: CMakeLists.txt  append_example_a2.cpp
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example3/: CMakeLists.txt  append_example3.cpp  append_example_a3.cpp  fshader_a3.glsl  vshader_a3.glsl
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example4/: CMakeLists.txt  append_example_a4.cc  fshader_a4.glsl  vshader_a4.glsl
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example5/: CMakeLists.txt  append_example_a5.cpp
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example6/: CMakeLists.txt  append_example_a6.cc
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example7/: CMakeLists.txt  append_example7.cpp  append_example_a7.cc  fshader_a7.glsl  vshader_a7.glsl
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example8/: CMakeLists.txt  append_example8.cpp  append_example_a8.cc  fshader_a8.glsl  vshader_a8.glsl
APPENDIX_A_EXAMPLES/LINUX_VERSIONS/append_example9/: CMakeLists.txt  append_example9.cpp  append_example_a9.cc  vshader_a9.glsl
chap_02/: README
chap_02/LINUX_VERSIONS/: Makefile  example1  example1.cpp  example2  example3  example4  example4b  example4b.cpp  example5  fshader22.glsl  vshader24.glsl
chap_02/LINUX_VERSIONS/example1/: CMakeLists.txt
chap_02/LINUX_VERSIONS/example2/: CMakeLists.txt  example2.cc  example2.cpp
chap_02/LINUX_VERSIONS/example3/: CMakeLists.txt  example3.cc  example3.cpp  fshader23.glsl  vshader23.glsl
chap_02/LINUX_VERSIONS/example4/: CMakeLists.txt  example4.cc  example4.cpp  fshader24.glsl
chap_02/LINUX_VERSIONS/example4b/: CMakeLists.txt
chap_02/LINUX_VERSIONS/example5/: CMakeLists.txt  example5.cc  example5.cpp
chap_02/MAC_VERSIONS/: Makefile  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example4b.cpp  example5.cpp  fshader21.glsl  fshader23.glsl  fshader24.glsl  vshader23.glsl  vshader24.glsl  vshader24b.glsl  vshader25.glsl
chap_02/MAC_VERSIONS/example4b/: vshader24b.glsl
chap_02/MAC_VERSIONS/example5/: vshader25.glsl
chap_02/WINDOWS_VERSIONS/: Makefile  example1.cpp
chap_03/: README
chap_03/LINUX_VERSIONS/: Makefile  example1  example1.cpp  example2  example2.cpp  example6  example6.cpp  vshader36.glsl
chap_03/LINUX_VERSIONS/example1/: CMakeLists.txt
chap_03/LINUX_VERSIONS/example2/: CMakeLists.txt  example2.cc
chap_03/LINUX_VERSIONS/example6/: CMakeLists.txt
chap_03/MAC_VERSIONS/: example1.cpp  example2.cpp  example6.cpp  fshader31.glsl  fshader32.glsl  ftrack.glsl  track.cpp  vshader31.glsl  vshader32.glsl  vtrack.glsl
chap_03/MAC_VERSIONS/example1/: example1.cc
chap_03/MAC_VERSIONS/example2/: vshader32.glsl
chap_03/WINDOWS_VERSIONS/: example6.cpp  fshader32.glsl
chap_04/: README
chap_04/LINUX_VERSIONS/: Makefile  example1  example1.cpp  example2  example2.cpp  example3  example3.cpp
chap_04/LINUX_VERSIONS/example1/: CMakeLists.txt
chap_04/LINUX_VERSIONS/example2/: CMakeLists.txt  example2.cpp  vshader42.glsl
chap_04/LINUX_VERSIONS/example3/: CMakeLists.txt  example3.cc  example3.cpp
chap_04/MAC_VERSIONS/: example1.cpp  example2.cpp  example3.cpp  example7.cpp  example8.cpp  fshader47.glsl  vshader41.glsl  vshader43.glsl  vshader48.glsl
chap_04/MAC_VERSIONS/example1/: example1.cc
chap_04/WINDOWS_VERSIONS/: example1.cpp  example2.cpp  fshader41.glsl  honolulu.raw
chap_05/: README
chap_05/LINUX_VERSIONS/: Makefile  example1  example1.cpp  example2  example2.cpp  example3  example3.cpp  example6  example6.cpp
chap_05/LINUX_VERSIONS/example1/: CMakeLists.txt  example1.cpp
chap_05/LINUX_VERSIONS/example2/: CMakeLists.txt  example2.cpp
chap_05/LINUX_VERSIONS/example3/: CMakeLists.txt  fshader53.glsl
chap_05/LINUX_VERSIONS/example6/: CMakeLists.txt
chap_05/MAC_VERSIONS/example1/: example1.cc
chap_05/MAC_VERSIONS/example2/: fshader52.glsl
chap_05/MAC_VERSIONS/example3/: vshader53.glsl
chap_05/MAC_VERSIONS/example6/: vshader56.glsl
chap_07/: README
chap_07/LINUX_VERSIONS/: example1  example1.cpp  example2  example2.cpp  example3  vshader72.glsl
chap_07/LINUX_VERSIONS/example1/: CMakeLists.txt  example1.cc
chap_07/LINUX_VERSIONS/example2/: CMakeLists.txt  fshader72.glsl
chap_07/LINUX_VERSIONS/example3/: CMakeLists.txt  example3.cc  example3.cpp
chap_07/MAC_VERSIONS/example1/: vshader71.glsl
chap_07/MAC_VERSIONS/example3/: fshader73.glsl  vshader73.glsl
chap_08/: README
chap_08/LINUX_VERSIONS/: example1  example2  example3  example3.cpp  vshader81.glsl  vshader83.glsl
chap_08/LINUX_VERSIONS/example1/: CMakeLists.txt  example1.cc  example1.cpp
chap_08/LINUX_VERSIONS/example2/: CMakeLists.txt  example2.cc  example2.cpp
chap_08/LINUX_VERSIONS/example3/: CMakeLists.txt  example3.cpp
chap_08/MAC_VERSIONS/example3/: example3.cc
chap_09/: README
chap_09/LINUX_VERSIONS/: chap09_6E_example1  example1  example2  example2.cpp  example2.cpp.bak  fshader92.glsl
chap_09/LINUX_VERSIONS/example1/: CMakeLists.txt  example1.cpp  fshader91.glsl
chap_09/LINUX_VERSIONS/example1_6E/: CMakeLists.txt  chap09_6E_example1.cpp
chap_09/LINUX_VERSIONS/example2/: CMakeLists.txt  example2.cpp  vshader92.glsl
chap_09/MAC_VERSIONS/example1_6E/: vshader91.glsl
chap_09/MAC_VERSIONS/example2/: example2.cc  vshader92.glsl
chap_10/: README
chap_10/LINUX_VERSIONS/: example1  example1.cpp  example2  example2.cpp  fshader101.glsl  fshader104.glsl  vshader104.glsl
common/: InitShader.cpp
include/: Angel.h  CheckError.h  mat.h  vec.h
(+13 files in other folders)
